@@ -1,7 +1,11 @@
 package it.project.server.undertow;
 
+import java.util.Base64;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
 import io.undertow.Undertow;
-import io.undertow.server.handlers.form.FormData;
 //import io.undertow.examples.UndertowExample;
 import io.undertow.server.handlers.resource.ClassPathResourceManager;
 import io.undertow.websockets.WebSocketConnectionCallback;
@@ -20,10 +24,7 @@ import static io.undertow.Handlers.path;
 import static io.undertow.Handlers.resource;
 import static io.undertow.Handlers.websocket;
 
-import org.apache.http.HttpResponse;
 import org.apache.lucene.queryparser.classic.ParseException;
-import org.json.*;
-
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 
@@ -31,10 +32,7 @@ import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
-import java.util.List;
 import java.util.Map;
-
-import sun.misc.BASE64Decoder;
 
 import javax.imageio.ImageIO;
 
@@ -42,173 +40,165 @@ public class ServerHTTP {
 	
 	static int numberOfRequest = 0;
 	
-    public static void main(final String[] args) {
+    public static void main(final String[] args) {  	
+    Undertow server = Undertow.builder()
+		.addHttpListener(8100, "localhost")
+		.setHandler(path()
+			// creates and handles requests arriving to this endpoint
+			.addPrefixPath( "/endpoint", websocket(new WebSocketConnectionCallback() {
     	
-        Undertow server = Undertow.builder()
-                .addHttpListener(8100, "localhost")
-                .setHandler(path()
-                		//CREO E GESTISCO LE RICHIESTE CHE ARRIVO A QUESTO ENDPONT
-                        .addPrefixPath("/endpoint", websocket(new WebSocketConnectionCallback() {
-
-                            @Override
-                            public void onConnect(WebSocketHttpExchange exchange, WebSocketChannel channel) {
-                                channel.getReceiveSetter().set(new AbstractReceiveListener() {
-
-                                    @Override
-                                    protected void onFullTextMessage(WebSocketChannel channel, BufferedTextMessage message) throws IOException {
-                                        numberOfRequest++;
-                                    	System.out.println("NUMBER OF REQUEST: " + numberOfRequest);
-                                        
-                                    	final String receivedData = message.getData().toString();
-                                        //System.out.println(receivedData);
-										
-										ServerHTTP myServer = new ServerHTTP(); 
-										
-										//CREO L'IMMAGINE QUERY DALLA STRINGA BASE64
-										myServer.createQueryImage(receivedData);
-                                        
-                                        //FormData data = receivedData;
-                                        long time = 0;
-                                        String messageData = null;
-                                        
-                                        /*******DEEP LEARNING PHASE*******/
-                                        //DATA UN'IMMAGINE PASSATA DAL CLIENT, RESTITUIRE LE K IMMAGINE PIU' SIMILI
-                                        //DATA UN'IMMAGINE PASSATA DAL CLIENT, RESTITUIRE LA CLASSE DI APPARTENANZE
-                                        try (ElasticImgSearching imgSearch = new ElasticImgSearching(Parameters.PIVOTS_FILE_GOOGLENET, Parameters.TOP_K_QUERY)) {
-                                        	
-                                        	System.out.println("SEARCHING SIMILAR IMAGES..");
-                                        	time = -System.currentTimeMillis();
-                                        	
-                                        	//AL MOMENTO QUESTA QUERY E' PRE SETTATA, MA DOVREMO METTERE 
-                                        	//IL MESSAGGIO CHE VIENE MANDATO DA CLIENT
-                                        	//File imgQuery = new File(Parameters.FOLDER_QUERY, "1039733.jpg");                                      	
-                                        	File imgQuery = new File("./query.jpg");
-                                        	
-                                			DNNExtractor extractor = new DNNExtractor();
-                                			
-                                			//ESTRAGGO LE FEATURE DELLA QUERY
-                                			float[] imgFeatures = extractor.extract(imgQuery, Parameters.DEEP_LAYER);
-                                			//L'ULTIMO PARAMETRO SERVER PER DEFINIRE LA CLASSE DELLA QUERY
-                                			ImgDescriptor query = new ImgDescriptor(imgFeatures, imgQuery.getName(), "bruschetta");                      				
-                                				
-                                			//CERCO LE K IMMAGINI SIMILI ALLA QUERY PASSATA IN INGRESSO
-											List<ImgDescriptor> res = imgSearch.search(query, Parameters.K);
+			@Override
+			public void onConnect(WebSocketHttpExchange exchange, WebSocketChannel channel) {
+				channel.getReceiveSetter().set( new AbstractReceiveListener() {
+    			
+					@Override
+		            protected void onFullTextMessage(WebSocketChannel channel, BufferedTextMessage message) throws IOException {
+						long startTime = System.currentTimeMillis();
+						
+						numberOfRequest++;
+		            	System.out.println("-- DEBUG -- Number of requests: " + numberOfRequest);
+		                
+		            	String receivedData = message.getData().toString();
+		                System.out.println("-- DEBUG -- Received message " + receivedData);
 											
-											//ORDINO IL RISULTATO DELLA RICERCA IN BASE ALLA SIMILARITY
-                                			System.out.println("REORDERING..");
-                                			res = imgSearch.reorder(query, res); 
-
-                                			//CLASIFICATION DELLA QUERY UTILIZZANDO IL RISULTATO DELLA RICERCA
-                                			KnnClassifier knn = new KnnClassifier();
-                                			String predictedClass = knn.classify(res, 10);
-                                			System.out.println("PREDICTED CLASS: " + predictedClass);
-                                			
-                                			//LISTA DELLE CLASSI ORDINATA PER CONFIDENCE 
-                                			Map<String,Double> sortedLListedClass = knn.getClassWithConfidence(res, 10);                         			
+						ServerHTTP myServer = new ServerHTTP(); 
 											
-											messageData = myServer.createJSON(sortedLListedClass, res, predictedClass);
-                                			                                			
-                                        } catch (ClassNotFoundException | ParseException e) {
-											e.printStackTrace();
-										}finally {
-											/*******RISPOSTA AL CLIENT*******/
-											//QUI ELABORIAMO IL RISULTATO DELLA RICERCA E PASSIAMO IL RISULATTO AL CLIENT
-											//IL RISULTATO SARA' MANDANTO CON UN JSON
-											System.out.println("SENDING RESULTS..");
-											//System.out.println("SEND: " + messageData);
-                                            for (WebSocketChannel session : channel.getPeerConnections()) {
-                                                WebSockets.sendText(messageData, session, null);
-                                            }
-                                            time += System.currentTimeMillis();
-                                            System.out.println("ENDED IN: " + time + " MS");
-                                        }
-                                    }
-                                });
-                                channel.resumeReceives();
-                            }
+						// creates the image query for the string base64
+						BufferedImage queryImage = myServer.createQueryImage(receivedData);
+		                                    
+		                // FormData data = receivedData;
+		                //long time = 0;
+		                String messageData = null;
+		                                    
+		                /******* DEEP LEARNING PHASE *******/
+		                // given the image received from the client, returns the k most similar images and the class of the image
+		                try(ElasticImgSearching imgSearch = new ElasticImgSearching(Parameters.PIVOTS_FILE, Parameters.STORAGE_FILE, Parameters.TOP_K_QUERY)) {
+		                	
+		                	System.out.println("-- DEBUG -- Searching for similar images...");
+		             
+		                	// saves the received image in a file
+		                	File imageQueryFile = new File("./receivedQuery" + Integer.toString(numberOfRequest) + ".jpg");
+		                	ImageIO.write(queryImage, "jpg", imageQueryFile);
+		                	
+		        			DNNExtractor extractor = new DNNExtractor();
+		        			
+		        			// extracts features from the query
+		        			float[] imgFeatures = extractor.extract(imageQueryFile, Parameters.DEEP_LAYER);
+		        		
+		        			// the last parameter is used to define the class of the query, it will be updated after the knn classification
+		        			ImgDescriptor query = new ImgDescriptor(imgFeatures, imageQueryFile.getName(), null);                      				
+		        					        			
+		        			// finds the k most similar images to the given query
+							List<ImgDescriptor> res = imgSearch.search(query, Parameters.K);
+	
+							// Orders result according to distance from the query 
+		        			System.out.println("-- DEBUG -- Reordering...");
+		        			res = imgSearch.reorder(query, res); 
+		
+		        			long startTimeKnn = System.currentTimeMillis();
+							
+		        			// classifies the query using the results of the search operation 
+		        			KnnClassifier knn = new KnnClassifier();
+		        			//Map<String, Double> sortedListedClasses = knn.classify(res);
+		        			Map<String, Double> sortedListedClasses = knn.weightedClassify(res, query);
+		        			
+		        			System.out.println("-- DEBUG -- Predicted class: " + knn.getPredictedClass());
+		        			query.setFoodClass(knn.getPredictedClass());
+		        			
+		        			long endTimeKnn = System.currentTimeMillis();
+		        			System.out.println("-- DEBUG -- Time required to perform KNN (in milliseconds): " + (endTimeKnn - startTimeKnn));
 
-                        }))
-                        //PATH PER LA PAGINA HOME, LEGGE IL FILE INDEX E LO VISUALIZZA 
-                        .addPrefixPath("/", resource(new ClassPathResourceManager(ServerHTTP.class.getClassLoader(), ServerHTTP.class.getPackage()))
-                                .addWelcomeFiles("./Foodle-master/index.html")))
-                .build();
-
-        server.start();
+		        			// creates the response message for the client
+							messageData = myServer.createJSON(sortedListedClasses, res, knn.getPredictedClass()); 
+							
+							long endTime = System.currentTimeMillis();
+							System.out.println("-- DEBUG -- Time required to search (in milliseconds): " + (endTime - startTime));
+		                } catch (ClassNotFoundException | ParseException e) {
+							e.printStackTrace();
+						} finally {
+							// the result of the search is elaborated and passed to the client in json format
+							System.out.println("-- DEBUG -- Sending results: " + messageData);
+		                    for(WebSocketChannel session : channel.getPeerConnections()) {
+		                        WebSockets.sendText(messageData, session, null);
+		                    }
+		                    //time += System.currentTimeMillis();
+		                    //System.out.println("ENDED IN: " + time + " MS");
+		                }
+					}
+				});
+                channel.resumeReceives();
+    		}
+			}))
+            
+			// path for the home page, reads the index file and visualizes it
+        	.addPrefixPath("/", resource(new ClassPathResourceManager(ServerHTTP.class.getClassLoader(), ServerHTTP.class.getPackage()))
+    		.addWelcomeFiles("./Foodle-master/index.html")))
+			.build();
+    
+    	server.start();
 	}
 	
-	public void createQueryImage(String receivedData) throws IOException{
-		//PRENDO LA PARTE DELLA STRINGA RELATVA ALL'IMMAGINE
+    // creates the query image from the string in base64 format received by the client
+	public BufferedImage createQueryImage(String receivedData) throws IOException {
+		// gets the part of the string base64 related to the image
         String[] temp = receivedData.split(",");
 		String base64img = temp[1];
 		
-		//DALLA STRINGA BASE64 OTTENGO L'IMG
-		BufferedImage image = null;
-		byte[] imageByte;
-		try {
-			BASE64Decoder decoder = new BASE64Decoder();
-			imageByte = decoder.decodeBuffer(base64img);
-			ByteArrayInputStream bis = new ByteArrayInputStream(imageByte);
-			image = ImageIO.read(bis);
-			bis.close();
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
+		// uses a Base64 decoder to retrieve the image
+		byte[] decodedBytes = Base64.getDecoder().decode(base64img);
+		BufferedImage image = ImageIO.read(new ByteArrayInputStream(decodedBytes));
 		
-		//SOLUZIONE TEMPORANEA?
-		//CREAO UN'IMMAGINE DAL BUFFEREDIMAGE TEMPORANEA COSI CHE POSSA ESSERE PASSATA IN INPUT ALL'EXTRACTOR
-		File outputfile = new File("./query.jpg");
-		ImageIO.write(image, "jpg", outputfile);
+		return image;
 	}
 
-	public String createJSON(Map<String,Double> sortedLListedClass, List<ImgDescriptor> res, String predictedClass){
-		/*********CREAZIONE DEL MESSAGGIO JSON*********/
+	// creates the response JSON message for the client
+	public String createJSON(Map<String, Double> sortedListedClasses, List<ImgDescriptor> res, String predictedClass) {
+		String messageData;
+		
 		JsonObject result = new JsonObject(); 
-		JsonArray classe = new JsonArray();
-		JsonArray img = new JsonArray();
-		
-		String messageData = null;
-		
 		result.addProperty("predicted_class", predictedClass);
 		
-		boolean isTheBestClass = true;
-		String bestResult = "not found";
-		//DA SISTEMARE, FUNZIONA MA POTREBBE ESSERE FATTO IN MODO PIU EFFICIENTE 
-		for (Map.Entry<String, Double> entry : sortedLListedClass.entrySet()) {
-			JsonObject similar = new JsonObject();
-			String foodClass = entry.getKey();
-			Double conf = entry.getValue();
-			
-			similar.addProperty("class", foodClass);
-			similar.addProperty("confidence", conf);
-			
-			JsonArray urls = new JsonArray();
-			for (int i = 0; i < res.size(); i++) {
+		JsonArray imgClass = new JsonArray();	
+		//boolean isTheBestClass = true;
+	
+		JsonObject similarFood;
+		String foodClass, bestResult = "not found";		
+		
+		//For each detected similar class a JsonObject is created specifying
+		// - the class
+		// - the confidence 
+		// - a list of the IDs of all images (detected by the search on Elasticsearch) that belong to that class
+		for(Map.Entry<String, Double> entry : sortedListedClasses.entrySet()) {
+			similarFood = new JsonObject();
+			foodClass = entry.getKey();
+			similarFood.addProperty("class", foodClass);
+			similarFood.addProperty("confidence", entry.getValue());
 				
-				if(res.get(i).getFoodClass().equals(foodClass)) {
-					if(isTheBestClass) {
-						bestResult = res.get(i).getId();
-						isTheBestClass = false;
-					} else {
-						urls.add(res.get(i).getId());
-					}
-				}                             			    	                                			    
-			similar.add("imgs", urls);                              			    
-			}
+			List<ImgDescriptor> listImages = res.stream().filter(p -> p.getFoodClass().equals(entry.getKey())).collect(Collectors.toList());			
+			//System.out.println("-- DEBUG -- Food class: " + foodClass + "   " + listImages.size() + " elements of the class: " + listImages);
 			
-			classe.add(similar);
-			//System.out.println(classe + " - " + conf);
+			if(foodClass.equals(predictedClass))  
+				bestResult = res.get(0).getId();
+			//System.out.println("-- DEBUG -- " + res.get(0));
+			//System.out.println("-- DEBUG -- " + res.get(0).getId());
+					
+			JsonArray urls = new JsonArray();
+			for(int i = 0; i < listImages.size(); i++) {
+				urls.add(listImages.get(i).getId());
+			}
+			similarFood.add("imgs", urls);
+			
+			imgClass.add(similarFood);
 		}
 		
 		result.addProperty("best_result", bestResult);
-		result.add("related_classes", classe);
+		result.add("related_classes", imgClass);
 		
-		
-		//CONCERTO IL JSON IN STRINGA PER INVIARLO AL CLIENT
-		//System.out.println(result.toString());
+		//json object is converted to string to sent it to the client
 		messageData = result.toString();
-
+		
+		System.out.println("-- DEBUG -- Messaggio: " + messageData);
 		return messageData;
 	}
-
 }
 
